Tests logic were rewritten