@@ -1,6 +1,7 @@
 package application.transaction;
 
 import application.DTO.CreateTransactionDTO;
+import application.DTO.GetTransactionDTO;
 import application.models.MonthlyLimit;
 import application.models.Transaction;
 import application.repositories.MonthlyLimitRepository;
@@ -8,16 +9,19 @@ import application.repositories.TransactionRepository;
 import application.services.impl.CurrencyRateServiceImpl;
 import application.services.impl.TransactionServiceImpl;
 import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.math.BigDecimal;
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 import static org.mockito.Mockito.*;
 
@@ -32,164 +36,119 @@ public class TransactionServiceTest {
     private CurrencyRateServiceImpl currencyRateService;
     @InjectMocks
     private TransactionServiceImpl transactionService;
+    private CreateTransactionDTO createTransactionDTO;
+    private Transaction transactionOne;
+    private Transaction transactionTwo;
+    private MonthlyLimit limit;
 
-    @Test
-    void limit_exceeded_false_test() {
-        CreateTransactionDTO transactionDTOMock = new CreateTransactionDTO(
-                1000000123L,
-                9999999999L,
-                "KZT",
-                100000.0,
-                "product");
+    @BeforeEach
+    public void setUp() {
+        createTransactionDTO = new CreateTransactionDTO();
+        createTransactionDTO.setAccountFrom(1000000009L);
+        createTransactionDTO.setAccountTo(9999999999L);
+        createTransactionDTO.setCurrencyShortName("KZT");
+        createTransactionDTO.setSum(new BigDecimal(700000));
+        createTransactionDTO.setExpenseCategory("product");
 
-        Transaction transactionMock = new Transaction(
-                transactionDTOMock.getAccountFrom(),
-                transactionDTOMock.getAccountTo(),
-                transactionDTOMock.getCurrencyShortName(),
-                transactionDTOMock.getSum()
-        );
+        limit = new MonthlyLimit();
+        limit.setLimitSettingDate(LocalDateTime.now().minusDays(30));
+        limit.setLimitAmount(new BigDecimal(1000));
+        limit.setLimitBalance(new BigDecimal(1000));
+        limit.setCurrencyShortName("USD");
+        limit.setExpenseCategory("product");
+        limit.setActive(true);
 
-        MonthlyLimit previousLimitMock = new MonthlyLimit(
-                LocalDateTime.parse("2024-04-19T00:00:00"),
-                1000.0,
-                1000.0,
-                "USD",
-                "product",
-                transactionMock,
-                false);
+        transactionOne = new Transaction();
+        transactionOne.setAccountFrom(1000000009L);
+        transactionOne.setAccountTo(9999999999L);
+        transactionOne.setCurrencyShortName("KZT");
+        transactionOne.setSum(new BigDecimal(50000));
+        transactionOne.setExpenseCategory("product");
+        transactionOne.setLimit(limit);
+        transactionOne.setLimitExceeded(false);
 
-        when(currencyRateService.getCurrencyRate(transactionDTOMock.getCurrencyShortName())).thenReturn(447.141886);
-        when(limitRepository.findFirstByExpenseCategoryOrderByCreatedDesc(transactionDTOMock.getExpenseCategory()))
-                .thenReturn(previousLimitMock);
-
-        ArgumentCaptor<Transaction> transactionCaptor = ArgumentCaptor.forClass(Transaction.class);
-        ArgumentCaptor<MonthlyLimit> limitCaptor = ArgumentCaptor.forClass(MonthlyLimit.class);
-
-        transactionService.save(transactionDTOMock);
-
-        verify(transactionRepository, Mockito.times(1)).save(transactionCaptor.capture());
-        verify(limitRepository, Mockito.times(1)).save(limitCaptor.capture());
-
-        MonthlyLimit capturedLimit = limitCaptor.getValue();
-
-        Assertions.assertFalse(capturedLimit.isLimitExceeded());
+        transactionTwo = new Transaction();
+        transactionTwo.setAccountFrom(1000000009L);
+        transactionTwo.setAccountTo(7777777777L);
+        transactionTwo.setCurrencyShortName("KZT");
+        transactionTwo.setSum(new BigDecimal(100000));
+        transactionTwo.setExpenseCategory("service");
+        transactionTwo.setLimit(limit);
+        transactionTwo.setLimitExceeded(false);
     }
 
     @Test
-    void limit_exceeded_true_test() {
-        CreateTransactionDTO transactionDTOMock = new CreateTransactionDTO(
-                1000000123L,
-                9999999999L,
-                "RUB",
-                100000.0,
-                "product");
-
-        Transaction transactionMock = new Transaction(
-                transactionDTOMock.getAccountFrom(),
-                transactionDTOMock.getAccountTo(),
-                transactionDTOMock.getCurrencyShortName(),
-                transactionDTOMock.getSum()
-        );
-
-        MonthlyLimit previousLimitMock = new MonthlyLimit(
-                LocalDateTime.parse("2024-04-19T00:00:00"),
-                1000.0,
-                1000.0,
-                "USD",
-                "product",
-                transactionMock,
-                false);
-
-        when(currencyRateService.getCurrencyRate(transactionDTOMock.getCurrencyShortName())).thenReturn(94.161959);
-        when(limitRepository.findFirstByExpenseCategoryOrderByCreatedDesc(transactionDTOMock.getExpenseCategory()))
-                .thenReturn(previousLimitMock);
-
-        ArgumentCaptor<Transaction> transactionCaptor = ArgumentCaptor.forClass(Transaction.class);
-        ArgumentCaptor<MonthlyLimit> limitCaptor = ArgumentCaptor.forClass(MonthlyLimit.class);
-
-        transactionService.save(transactionDTOMock);
-
-        verify(transactionRepository, Mockito.times(1)).save(transactionCaptor.capture());
-        verify(limitRepository, Mockito.times(1)).save(limitCaptor.capture());
-
-        MonthlyLimit capturedLimit = limitCaptor.getValue();
-
-        Assertions.assertTrue(capturedLimit.isLimitExceeded());
-    }
-
-    @Test
-    void limit_exceeded_false_when_limit_is_not_set_null_test() {
-        CreateTransactionDTO transactionDTOMock = new CreateTransactionDTO(
-                1000000123L,
-                9999999999L,
-                "KZT",
-                100000.0,
-                "product");
-
-        when(currencyRateService.getCurrencyRate(transactionDTOMock.getCurrencyShortName())).thenReturn(447.141886);
-        when(limitRepository.findFirstByExpenseCategoryOrderByCreatedDesc(transactionDTOMock.getExpenseCategory()))
-                .thenReturn(null);
-
-        ArgumentCaptor<Transaction> transactionCaptor = ArgumentCaptor.forClass(Transaction.class);
-        ArgumentCaptor<MonthlyLimit> limitCaptor = ArgumentCaptor.forClass(MonthlyLimit.class);
-
-        transactionService.save(transactionDTOMock);
-
-        verify(transactionRepository, Mockito.times(1)).save(transactionCaptor.capture());
-        verify(limitRepository, Mockito.times(1)).save(limitCaptor.capture());
-
-        MonthlyLimit capturedLimit = limitCaptor.getValue();
-
-        Assertions.assertFalse(capturedLimit.isLimitExceeded());
-    }
-
-    @Test
-    void limit_exceeded_true_when_limit_is_not_set_null_test() {
-        CreateTransactionDTO transactionDTOMock = new CreateTransactionDTO(
-                1000000123L,
-                9999999999L,
-                "KZT",
-                10000000.0,
-                "product");
-
-        when(currencyRateService.getCurrencyRate(transactionDTOMock.getCurrencyShortName())).thenReturn(447.141886);
-        when(limitRepository.findFirstByExpenseCategoryOrderByCreatedDesc(transactionDTOMock.getExpenseCategory()))
-                .thenReturn(null);
-
-        ArgumentCaptor<Transaction> transactionCaptor = ArgumentCaptor.forClass(Transaction.class);
-        ArgumentCaptor<MonthlyLimit> limitCaptor = ArgumentCaptor.forClass(MonthlyLimit.class);
-
-        transactionService.save(transactionDTOMock);
-
-        verify(transactionRepository, Mockito.times(1)).save(transactionCaptor.capture());
-        verify(limitRepository, Mockito.times(1)).save(limitCaptor.capture());
-
-        MonthlyLimit capturedLimit = limitCaptor.getValue();
-
-        Assertions.assertTrue(capturedLimit.isLimitExceeded());
-    }
-
-    @Test
-    void get_all_test() {
-        Transaction transactionOne = new Transaction(
-                1234567890L,
-                9999999999L,
-                "KZT",
-                50000.0);
-
-        Transaction transactionTwo = new Transaction(
-                1234567890L,
-                9999999999L,
-                "KZT",
-                70000.0);
-
-        List<Transaction> mockTransactions = List.of(transactionOne, transactionTwo);
-
-        when(transactionRepository.findAll()).thenReturn(mockTransactions);
+    public void test_Get_All() {
+        List<Transaction> transactions = Arrays.asList(transactionOne, transactionTwo);
+        when(transactionRepository.findAll()).thenReturn(transactions);
 
         List<Transaction> result = transactionService.getAll();
 
-        Assertions.assertNotNull(result);
-        Assertions.assertEquals(mockTransactions, result);
+        Assertions.assertEquals(transactions, result);
+        verify(transactionRepository, times(1)).findAll();
+    }
+
+    @Test
+    public void test_Get_Transactions_ExceededLimit() {
+        Transaction limitExceededTransaction = new Transaction();
+        limitExceededTransaction.setCreated(LocalDateTime.now());
+        limitExceededTransaction.setAccountFrom(1000000009L);
+        limitExceededTransaction.setAccountTo(9999999999L);
+        limitExceededTransaction.setSum(new BigDecimal(1500));
+        limitExceededTransaction.setCurrencyShortName("USD");
+        limitExceededTransaction.setExpenseCategory("product");
+        limitExceededTransaction.setLimit(limit);
+        limitExceededTransaction.setLimitExceeded(true);
+
+        List<Transaction> transactions = List.of(limitExceededTransaction);
+        when(transactionRepository.findAllByLimitExceeded(true)).thenReturn(transactions);
+
+        List<GetTransactionDTO> result = transactionService.getTransactionsExceededLimit();
+
+        Assertions.assertEquals(1, result.size());
+        Assertions.assertEquals(new BigDecimal(1500), result.get(0).getSum());
+        verify(transactionRepository, times(1)).findAllByLimitExceeded(true);
+    }
+
+    @Test
+    public void test_Create_Transaction_ExceedsLimit() {
+        when(currencyRateService.getCurrencyRate("KZT")).thenReturn(new BigDecimal(475));
+        when(limitRepository.findByExpenseCategoryAndActive("product", true)).thenReturn(Optional.of(limit));
+
+        transactionService.create(createTransactionDTO);
+
+        ArgumentCaptor<Transaction> transactionCaptor = ArgumentCaptor.forClass(Transaction.class);
+        verify(transactionRepository, times(1)).save(transactionCaptor.capture());
+
+        Transaction savedTransaction = transactionCaptor.getValue();
+        Assertions.assertTrue(savedTransaction.isLimitExceeded());
+    }
+
+    @Test
+    public void test_Create_Transaction_DoesNot_ExceedLimit() {
+        when(currencyRateService.getCurrencyRate("KZT")).thenReturn(new BigDecimal(475));
+        when(limitRepository.findByExpenseCategoryAndActive("product", true)).thenReturn(Optional.of(limit));
+
+        limit.setLimitBalance(new BigDecimal(1500));
+
+        transactionService.create(createTransactionDTO);
+
+        ArgumentCaptor<Transaction> transactionCaptor = ArgumentCaptor.forClass(Transaction.class);
+        verify(transactionRepository, times(1)).save(transactionCaptor.capture());
+
+        Transaction savedTransaction = transactionCaptor.getValue();
+        Assertions.assertFalse(savedTransaction.isLimitExceeded());
+    }
+
+    @Test
+    public void testCreate_withInvalidCurrencyRate() {
+        when(currencyRateService.getCurrencyRate("KZT")).thenReturn(BigDecimal.ZERO);
+
+        IllegalArgumentException thrown = Assertions
+                .assertThrows(IllegalArgumentException.class, () -> transactionService.create(createTransactionDTO));
+
+        Assertions.assertEquals("Invalid currency rate", thrown.getMessage());
+        verify(transactionRepository, times(0)).save(any(Transaction.class));
+        verify(limitRepository, times(0)).save(any(MonthlyLimit.class));
     }
 }
